# smart_trade_platform

./: .gitignore  CMakeLists.txt  README.md  TheRockLiuHY's_eclipse_code_style.xml  index.html  params.json
.metadata/: version.ini
STPTest/: .cproject  .project  CMakeLists.txt
STPTest/CMakeBuild/: CMakeLists.txt
STPTest/src/: STPTest.cpp
SmartCMS/: .project
SmartDB/: .cproject  .project
SmartDCP/: .cproject  .project
SmartEngine/: .cproject  .project  tradeengine.cpp  tradeengine.h
SmartHAF/: .cproject  .project
SmartMemDB/: .cproject  .project
SmartNet/: .cproject  .project
SmartNet/RMP/: RMPEndpoint.cpp  RMPEndpoint.h
SmartNet/RUP/: RUPEndpoint.cpp  RUPEndpoint.h
SmartNet/ReliableCast/: RCP.cpp  RCP.h  ReliableCast.cpp  ReliableCast.h
SmartNet/ReliableProtocal/: ReliableProtocal.cpp  ReliableProtocal.h
SmartNet/base/: Endpoint.cpp  Endpoint.h
SmartRiskControl/: .cproject  .project
SmartRouter/: .cproject  .project
SmartTrade/: .cproject  .project
SmartTradeEngine/: .project
SmartTradeEngine/src/: SmartTradeEngine.cpp
SmartTradePlatform/: .cproject  .project
SmartTradePlatformTest/: .project
SmartTradePlatformTest/src/: STPTest.cpp
SmartUtils/: .cproject  CMakeLists.txt
SmartUtils/Base/: Base.h  Config.h  (+1 more)
TestBKUPC/: .cproject  .project
TestMPI/: .cproject
TestMPIPI/: .cproject  .project
TestMPIPICPP/: .cproject  .project
TestOpenCL/: .cproject  .project
TestOpenMP/: .cproject
TestUPC/: .cproject  .project
quant_trade_engine/: .cproject  .project
smart_cms/: .cproject  .project
smart_db/: .cproject  .project
smart_dcp/: .cproject  .project
smart_engine/: .cproject  .project  trade_engine.cpp  trade_engine.h
smart_haf/: .cproject  .project
smart_net/: .cproject  .project
smart_rc/: .cproject  .project
smart_router/: .cproject  .project
smart_trade/: .cproject  .project
smart_utils/: .cproject
stp_test/: .cproject  .project
test_bkupc/: .cproject  .project
test_mpi/: .cproject  .project
test_mpipi/: .cproject  .project
test_mpipicpp/: .cproject  .project
test_opencl/: .cproject  .project
test_openmp/: .cproject  .project
(+128 files in other folders)
